--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,148 @@
-numpy
-pandas
-scikit-learn
+altgraph==0.17.4
+argcomplete==2.0.0
+attrs==23.1.0
+Babel==2.12.1
+bcrypt==4.0.1
+Beaker==1.12.1
+beautifulsoup4==4.12.3
+blivet==3.8.2
+blivet-gui==2.5.0
+Brlapi==0.8.5
+cached-property==1.5.2
+capstone==4.0.2
+certifi==2023.5.7
+cffi==1.15.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.3
+click-plugins==1.1.1
+cockpit @ file:///builddir/build/BUILD/cockpit-322/tmp/wheel/cockpit-322-py3-none-any.whl#sha256=5587d8c988d8b9ebe77b0cca42347ff1cf40338aac6721b9251be1479e6ca19c
+colorama==0.4.6
+colored-traceback==0.3.0
+contourpy==1.3.0
+crayons==0.4.0
+cryptography==41.0.7
+cupshelpers==1.0
+cycler==0.12.1
+dasbus==1.7
+dbus-python==1.3.2
+distlib==0.3.8
+distro==1.8.0
+dnf==4.21.1
+docker==6.1.3
+docker-compose==1.29.2
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+exif==1.6.0
+fb-re2==1.0.7
+fedora-third-party==0.10
+file-magic==0.4.0
+filelock==3.15.4
+fonttools==4.54.1
+fros==1.1
+humanize==3.13.1
+idna==3.7
+intervaltree==3.1.0
+joblib==1.4.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.7
+langtable==0.0.68
+libcomps==0.1.20
+libdnf==0.73.3
+lxml==4.9.3
+Mako==1.2.3
+MarkupSafe==2.1.3
+matplotlib==3.9.2
+mercurial==6.5.3
+mod-wsgi==4.9.4
+nftables==0.1
+numpy==2.0.0
+olefile==0.46
+opencv-python==4.10.0.84
+packaging==24.1
+pandas==2.2.3
+paramiko==3.4.0
+Paste==3.5.3
+pefile==2023.2.7
+pexpect==4.8.0
+pid==2.2.3
+piexif==1.1.3
+pillow==10.4.0
+pipenv==2024.0.1
+platformdirs==4.2.2
+plum-py==0.8.7
+plumbum==1.7.2
+ply==3.11
+productmd==1.38
+progressbar2==3.53.2
+psutil==5.9.5
+ptyprocess==0.7.0
+pwntools==4.11.0
+pwquality==1.4.5
+pyasn1==0.5.1
+pycairo==1.25.1
+pycparser==2.20
+pycrypto==2.6.1
+pycups==2.0.4
+pycurl==7.45.2
+pyelftools==0.31
+pyenchant==3.2.2
+pygit2==1.14.0
+Pygments==2.15.1
+PyGObject==3.46.0
+pyinstaller==6.8.0
+pyinstaller-hooks-contrib==2024.7
+pykickstart==3.48
+PyNaCl==1.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.2.0
+pyparted==3.13.0
+pyserial==3.5
+PySocks==1.7.1
+python-augeas==1.1.0
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+python-meh==0.51
+python-utils==3.3.3
+pytz==2024.2
+pyudev==0.24.1
+pywin32-ctypes==0.2.2
+pyxdg==0.27
+PyYAML==6.0.1
+referencing==0.30.2
+regex==2024.4.28
+requests==2.28.2
+requests-file==1.5.1
+requests-ftp==0.3.1
+ROPGadget==7.3
+rpds-py==0.17.1
+rpm==4.19.1.1
+rpmautospec==0.7.2
+rpmautospec-core==0.1.5
+rpyc==5.1.0
+scikit-learn==1.5.2
+scipy==1.14.1
+selinux @ file:///builddir/build/BUILD/libselinux-3.5/src
+sepolicy @ file:///builddir/build/BUILD/selinux-3.5/python/sepolicy
+setools==4.4.3
+setuptools==74.1.2
+simpleaudio==1.0.4
+simpleline==1.9.0
+six==1.16.0
+sortedcontainers==2.4.0
+sos==4.6.0
+soupsieve==2.5
+systemd-python==235
+Tempita==0.5.2
+texttable==1.6.4
+threadpoolctl==3.5.0
+trash-cli==0.22.10.20
+tzdata==2024.2
+unicorn==2.0.1.post1
+urllib3==1.26.19
+virtualenv==20.26.3
+websocket-client==1.3.3
+wheel==0.43.0
+zombie-imp==0.0.2
